tests/integration/error_handling/03-missing-special-fields-decl-in-document-config/test.itest
RUN: %expect_exit 1 %strictdoc passthrough %S/input.sdoc --output-file=%S/Output/output.sdoc | filecheck %s --dump-input=fail
CHECK: error: could not parse file: {{.*}}.
CHECK: Semantic error: Requirements special fields are not registered document-wide.
CHECK: Location: {{.*}}
CHECK: Message: Requirement's special fields must be declared in [DOCUMENT].SPECIAL_FIELDS: [SpecialField(ECSS_COMPLIANCE: Compliant)]
CHECK: Example:
CHECK: [DOCUMENT]
CHECK: SPECIAL_FIELDS:
CHECK: - NAME: ECSS_COMPLIANCE
CHECK:   TYPE: String
CHECK-EMPTY:
CHECK: [REQUIREMENT]
CHECK: SPECIAL_FIELDS:
CHECK: ECSS_COMPLIANCE: Compliant
